# NASA_SpaceApp_2024

./: README.md  pyproject.toml
app_interface/: colors.conf  exosky_app.py  exosky_app.spec  exosky_app_rc.py  main.qml
backend/: exosky_backend.py  test.ipynb
resources/: colors.conf  style.qrc
resources/build_util/: __init__.py  build_constants.py
resources/constants/: __init__.py  constants.py
