[tool.poetry]
name = "Exosky App"
version = "0.1.0"
description = ""
authors = ["Winnie"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pyside6 = "^6.6.3.1"
toml = "^0.10.2"
black = "^24.3.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pylint = "^3.1.0"
mypy = "^1.9.0"
ipyaladin = "^0.5.0"
requests = "^2.32.3"
ipywidgets = "^8.1.5"
astroquery = "^0.4.7"
matplotlib = "^3.9.2"
pyinstaller = "^6.10.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
nbformat = "^5.10.4"
pythreejs = "^2.4.2"
py4j = "^0.10.9.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0", "python==3.10.9"]
build-backend = "poetry.core.masonry.api"
